force-app/main/default/objects/Form_Submission__c/Form_Submission__c.object-meta.xml
<CustomObject>
    <description>This Object will Represent all the record of a form submission by a contact (Sample, Conference, ect...)</description>
    <label>Form Submission</label>
    <nameField>
        <label>Form Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>