force-app/main/default/objects/Form_Submission__c/fields/Dummy_Check_For_Mass_Updates__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Check_For_Mass_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dummy Check For Mass Updates</label>
    <type>Checkbox</type>
</CustomField>