force-app/main/default/objects/Form_Submission__c/fields/Form_Submission_Number__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Form Submission Number</label>
    <type>AutoNumber</type>
</CustomField>