force-app/main/default/objects/Form_Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dummy_Check_For_Mass_Updates__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Form_Submission_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>